[project]
name = "imbaml"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "imbalanced-ensemble==0.2.2",
    "ray==2.40.0",
    "hyperopt",
    "lightgbm==4.6.0",
    "scikit_learn==1.6.1",
    "xgboost==3.0.2",
    "catboost",
    "imbalanced_learn==0.12.3",
    "matplotlib==3.7.5",
    "numpy==1.26.0",
    "pandas==2.2.3",
    "pytest==8.3.5",
    "seaborn==0.13.2",
    "setuptools>=80.9.0",
    "fsspec>=2025.9.0",
    "pyarrow>=21.0.0",
]

[tool.setuptools.packages.find]
include = ["imbaml"]

[tool.uv.sources]
hyperopt = { git = "https://github.com/hyperopt/hyperopt" }
